--- a/index.html
+++ b/index.html
@@ -7,90 +7,92 @@
 
         <title>Christopher Eskow</title>
 
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-
         <style>
             * {
+                box-sizing: border-box;
                 margin: 0;
                 padding: 0;
             }
 
             body {
-                margin: 0 auto;
-                background: #e6e6e6;
-                color: #333;
+                background: #eee;
+                font: 100%/1.5 Verdana, sans-serif;
+                text-align: center;
+            }
+
+            img {
+                display: block;
+                margin: 25px auto;
+                max-width: 100%;
+                filter: grayscale(100%);
+                border-radius: 50%;
+            }
+
+            header {
+                padding: 25px;
+                background: #333;
             }
 
             h1 {
-                margin-bottom: 1em;
-                padding: 0.3em 0;
-                background: #333;
-                color: #999;
-                font: italic normal 4em/1.5 Baskerville, Georgia, serif;
-                text-align: center;
+                margin-bottom: 20px;
+                font-size: 2.4rem;
+                font-weight: normal;
+                color: #ccc;
             }
 
-            p {
-                max-width: 20em;
-                width: 90%;
-                margin: 0 auto;
-                color: #555;
-                font: 3em/1.5 Avenir, Calibri, Helvetica, Arial, sans-serif;
-                text-align: center;
+            h2 {
+                font: italic 1.6rem Georgia, serif;
+                color: #aaa;
+            }
+
+            nav {
+                padding: 25px;
+                background: #ccc;
+            }
+
+            li {
+                display: inline-block;
+                margin-right: 15px;
+                list-style: none;
+            }
+
+            li::after {
+                content: "•";
+                margin-left: 15px;
+                color: #999;
+            }
+
+            li:last-child::after {
+                content: none;
             }
 
             a {
-                color: #933;
+                color: #069;
+                font-size: 1.2rem;
                 text-decoration: none;
             }
 
             a:hover {
-                color: #369;
-            }
-
-            @media screen and (min-width: 701px) and (max-width: 850px) {
-                h1 {
-                    padding: 0.2em 0;
-                    font-size: 3.5em;
-                }
-
-                p {
-                    max-width: none;
-                    font-size: 2.5em;
-                }
-            }
-
-            @media screen and (min-width: 601px) and (max-width: 700px) {
-                h1 {
-                    margin-bottom: 0.5em;
-                    padding: 0.1em 0;
-                    font-size: 3em;
-                }
-
-                p {
-                    max-width: none;
-                    font-size: 2em;
-                }
-            }
-
-            @media screen and (max-width: 600px) {
-                h1 {
-                    margin-bottom: 0.5em;
-                    padding: 0;
-                    font-size: 2.5em;
-                }
-
-                p {
-                    max-width: none;
-                    font-size: 1.5em;
-                }
+                text-decoration: underline;
             }
         </style>
     </head>
 
     <body>
-        <h1>Christopher Eskow</h1>
+        <img src="https://www.gravatar.com/avatar/e582664d71f2ab22dc2dc304dc57ba32?s=250" alt="Image of Chris">
 
-        <p>I'm Chris. I'm the <a href="http://www.linkedin.com/in/chriseskow/">lead web developer</a> at a <a href="https://www.firstinvestors.com/">middle-market financial services company</a>. I enjoy traveling and playing bass guitar. I <a href="https://twitter.com/chriseskow">tweet occasionally</a> and <a href="http://www.last.fm/user/chriseskow">listen to music</a>. I have some of my code <a href="https://github.com/chriseskow">on GitHub</a> (but not enough). <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#104;&#114;&#105;&#115;&#64;&#99;&#104;&#114;&#105;&#115;&#101;&#115;&#107;&#111;&#119;&#46;&#99;&#111;&#109;">Email me</a> if you wish.</p>
+        <header>
+            <h1>Christopher Eskow</h1>
+            <h2>Web Developer</h2>
+        </header>
+
+        <nav>
+            <ul>
+                <li><a href="https://twitter.com/chriseskow">Twitter</a></li>
+                <li><a href="https://github.com/chriseskow">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/chriseskow/">LinkedIn</a></li>
+                <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#104;&#114;&#105;&#115;&#64;&#99;&#104;&#114;&#105;&#115;&#101;&#115;&#107;&#111;&#119;&#46;&#99;&#111;&#109;/">Email</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
