Removve wayward slash from email link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <li><a href="https://twitter.com/chriseskow">Twitter</a></li>
                 <li><a href="https://github.com/chriseskow">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/chriseskow/">LinkedIn</a></li>
-                <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#104;&#114;&#105;&#115;&#64;&#99;&#104;&#114;&#105;&#115;&#101;&#115;&#107;&#111;&#119;&#46;&#99;&#111;&#109;/">Email</a></li>
+                <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#104;&#114;&#105;&#115;&#64;&#99;&#104;&#114;&#105;&#115;&#101;&#115;&#107;&#111;&#119;&#46;&#99;&#111;&#109;">Email</a></li>
             </ul>
         </nav>
     </body>
