Temporary workaround for DigitalOcean's lack of redirect support

--- a/index.html
+++ b/index.html
@@ -94,5 +94,12 @@
                 <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#104;&#114;&#105;&#115;&#64;&#99;&#104;&#114;&#105;&#115;&#101;&#115;&#107;&#111;&#119;&#46;&#99;&#111;&#109;">Email</a></li>
             </ul>
         </nav>
+
+        <script>
+            // Temporary workaround for DO's lack of redirect support
+            if (window.location.hostname != 'chriseskow.com') {
+                window.location = 'https://chriseskow.com/';
+            }
+        </script>
     </body>
 </html>
